[package]
name = "rfix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
chrono = "0.4"
dashmap = "6.1"
memchr = "2.7"
smallvec = "1.15"
tokio = { version = "1.47", features = ["full"] }
log = "0.4"
fast_log = "1.7"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
